--- a/project.json
+++ b/project.json
@@ -5,7 +5,7 @@
     "main_file": "src/nice_verbose.h",
     "author": "Lewis Evans",
     "license": "GNU General Public License v3.0",
-    "url": "/nice_vebose",
+    "url": "https://www.github.com/lewisevans2007/nice_vebose",
     "email": "none",
     "languages": [
         "c++"
