--- a/project.json
+++ b/project.json
@@ -3,9 +3,9 @@
     "description": "A simple header file to create nice verbose output.",
     "version": "",
     "main_file": "src/nice_verbose.h",
-    "author": "Lewis Evans",
+    "author": "0x4248",
     "license": "GNU General Public License v3.0",
-    "url": "https://www.github.com/lewisevans2007/nice_vebose",
+    "url": "https://www.github.com/0x4248/nice_vebose",
     "email": "none",
     "languages": [
         "c++"
